[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/credits.gd" type="Script" id=1]
[ext_resource path="res://textures/credits_screen.png" type="Texture" id=2]
[ext_resource path="res://fonts/APRIFA__.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://themes/menu_theme.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="credits_screen" type="Sprite" parent="."]
position = Vector2( -0.50004, -1.50002 )
scale = Vector2( 0.5724, 0.595306 )
texture = ExtResource( 2 )

[node name="credit_ui" type="VBoxContainer" parent="."]
margin_top = 150.0
margin_right = 621.0
margin_bottom = 119.0

[node name="ReturntoMenu" type="Button" parent="credit_ui"]
margin_right = 621.0
margin_bottom = 51.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Return to Menu"

[connection signal="pressed" from="credit_ui/ReturntoMenu" to="." method="_on_ReturntoMenu_pressed"]
